add start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "azure hello world",
   "main": "app.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --recursive"
+    "test": "node node_modules/mocha/bin/mocha --recursive",
+    "start": "node app.js"
   },
   "dependencies": {
     "restify": "8.3.3",
